Agrego imagen final logo mepaseaste

--- a/presentacion.tex
+++ b/presentacion.tex
@@ -744,8 +744,11 @@ Montevideo, Uruguay}
 	%\frametitle{Fin}
 	\centering
 	{\huge Gracias}
+	\vspace{1cm}
 
-	\vspace{3cm}
+	\includegraphics[width=.3\textwidth]{logo-mepaseaste.png}
+	\vspace{.5cm}
+
 	Sitio web del proyecto: \url{www.fing.edu.uy/inco/grupos/cecal/hpc/AG-Taxi/}
 	
 }
