Agrego graficas conf param

--- a/presentacion.tex
+++ b/presentacion.tex
@@ -486,6 +486,10 @@ Montevideo, Uruguay}
 		{\small $p_C \in \lbrace 0.6; \alert{0.75}; 0.95\rbrace$; $p_M \in \lbrace 0.001; 0.01; \alert{0.1}\rbrace$.}
 	\end{itemize}
 	\end{block}
+	\vspace{.5cm}
+	\centering
+	\includegraphics[width=.5\textwidth]{./param3}
+
 
 }
 
@@ -587,6 +591,11 @@ Montevideo, Uruguay}
 			$p_C \in \lbrace 0.6; \alert{0.75}; 0.95\rbrace$; $p_M \in \lbrace 0.001; 0.01; \alert{0.1}\rbrace$.}\\
 		\end{itemize}
 	\end{block}
+	\centering
+	\includegraphics[width=.5\textwidth]{./conf_costo}
+	\includegraphics[width=.5\textwidth]{./conf_demora}
+
+
 }
 
 \frame{
