saco pausa en eval multi

--- a/presentacion.tex
+++ b/presentacion.tex
@@ -623,7 +623,7 @@ Montevideo, Uruguay}
 		\input{./evaluacion_experimental/metricas_mo_resumen_maeb.tex}
 		\small{Buena convergencia y diversidad. Pocas soluciones no dominadas.}
 	\end{block}
-	\pause
+	%\pause
 	\begin{block}{\scriptsize{\textit{NSGA--II: \tiny{``Multiobjective taxi sharing optimization using the NSGA-II evolutionary algorithm'' (MIC)}}}}
 		Hasta \alert{105.2\%} de mejora en demora y \alert{75.1\%} en costo sobre ávidos.
 		
