Saco pausas que no quiero

--- a/presentacion.tex
+++ b/presentacion.tex
@@ -207,20 +207,17 @@ Montevideo, Uruguay}
 
 	\begin{block}{Car pooling problem (CPP)}
 	Yan et al. (2011): \textbf{CPP con histórico de viajes} (relajación lagrangeana). 	\end{block}
-	\pause
+
 	\begin{block}{Dial--a--ride problem (DARP)}
 	Cordeau et al. (2003): \textbf{DARP estático con ventanas de tiempo}. \\\hspace{.8cm} {\small Búsqueda tabú con tiempos de ejecución de hasta 90 minutos.}
 	\end{block}
 
-
-	\pause
 	\begin{block}{Taxi pooling problem (TPP)}
 	Tao et al. (2007): heurísticas ávidas para \textbf{one--to--many} y many--to--one. \\ \hspace{.8cm}{\small Las mejoras se reportan en términos absolutos.}
 
 	Ma et al. (2013): TPP dinámico con pedidos en tiempo real.\\ \hspace{.8cm}{\small 13\% de ahorro en distancia con un algoritmo ávido en \textbf{instancias realistas}.}
 	\end{block}
 
-	\pause
 	\begin{block}{Resumen}
 	Pocos trabajos \alert{centrados en el usuario} y con un enfoque \alert{multiobjetivo}.
 	\end{block}
@@ -238,11 +235,11 @@ Montevideo, Uruguay}
 	\frametitle{Algoritmos evolutivos}
 	\begin{block}{Definición}
 		\begin{itemize}
-			\item Técnicas estocásticas que emulan el proceso de evolución natural de las especies.\pause
-			\item Aplicadas a problemas de \alert{optimización}, búsqueda y aprendizaje.\pause
-			\item Técnica iterativa (\textbf{generación}) que aplica operadores estocásticos sobre un conjunto de individuos (\textbf{población}).\pause
-			\item Cada individuo codifica una solución tentativa al problema y tiene un valor de \textbf{fitness}.\pause
-			\item El propósito es mejorar el fitness de los individuos en la población mediante la aplicación de \textbf{operadores evolutivos}.\pause
+			\item Técnicas estocásticas que emulan el proceso de evolución natural de las especies.
+			\item Aplicadas a problemas de \alert{optimización}, búsqueda y aprendizaje.
+			\item Técnica iterativa (\textbf{generación}) que aplica operadores estocásticos sobre un conjunto de individuos (\textbf{población}).
+			\item Cada individuo codifica una solución tentativa al problema y tiene un valor de \textbf{fitness}.
+			\item El propósito es mejorar el fitness de los individuos en la población mediante la aplicación de \textbf{operadores evolutivos}.
 			\item Los operadores guian al algoritmo evolutivo hacia soluciones tentativas de mayor calidad.
 		\end{itemize}
 	\end{block}
